--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
 <body>
 
 <div class="wrapper">
- <figure class="headshot">
-   <img class="headshot-front" src="images/headshot.png">
-   <img class="headshot-back" src="images/headshot-back.png">
- </figure>
+ <div class="headshot front"></div>
  <section class="text">
-  <p>Hi there! I am Victor.</p>
+  <p>Hi there! I am <a class="link swap" href="#">Victor</a>.</p>
   <p>
     I am a maker with a background in software and business.<br />
     I enjoy startups, mountain running and good food.<br />
@@ -27,6 +24,8 @@
   <p>I am always looking to work on new ideas. If you have one and you think I can help shoot me an <a class="link" href="mailto:vdel26+web@gmail.com">email</a> right away.</p>
   <p>You can find me on <a class="link" href="http://twitter.com/lechienvic">Twitter</a>, <a class="link" href="http://github.com/vdel26">Github</a> or <a class="link" href="http://es.linkedin.com/in/vdelgado/es">Linkedin</a>.</p>
  </section>
+
+ <script src="js/script.built.js"></script>
 </div>
 
 </body>
