--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
   <p>I am always looking to work on new ideas. If you have one and you think I can help shoot me an <a class="link" href="mailto:vdel26+web@gmail.com">email</a> right away.</p>
   <p>You can find me on <a class="link" href="http://twitter.com/lechienvic">Twitter</a>, <a class="link" href="http://github.com/vdel26">Github</a> or <a class="link" href="http://es.linkedin.com/in/vdelgado/es">Linkedin</a>.</p>
  </section>
+</div>
 
  <script src="js/script.built.js"></script>
-</div>
+ <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-40328429-1', 'auto');
+  ga('send', 'pageview');
+ </script>
 
 </body>
 </html>
